Fixed atspi_text_ functions

* atspi_text_get_text_attribute_value
      Fixed dbus signature in _atspi_dbus_call function
      and add missing argument for string.

  * atspi_text_get_default_attributes
      Receiving return value by reference from hash table

https://bugzilla.gnome.org/show_bug.cgi?id=755731